Fixed image styling on disclaimer, previous/next button visibility, verbiage on guest page, end of disclaimer, no longer showing guests not attending on details page, family-contact-info verbiage update

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -80,6 +80,10 @@ h2 {
   margin: 1.5em -15px 0.5em;
 }
 
+img {
+  padding: 10px;
+}
+ 
 .bar {
   clear: both;
   background: #ddd;
